# newtonian

./: .gitignore  CMakeLists.txt  README.md  math_test.cc
examples/: CMakeLists.txt
examples/cmake_examples/test_2/: read_file.cpp
examples/qt_examples/: CMakeLists.txt  README.md  toplevel.pro  window.cpp
examples/qt_examples/basic_window/: window.cpp
examples/qt_examples/ui_example/: CMakeLists.txt  example_window.cpp  example_window.ui  examplewindow.hpp  main.cpp
examples/unitTesting/: CMakeLists.txt  random.cpp  random.hpp  random_test.cpp
lib/: CMakeLists.txt
lib/deltaTime/: CMakeLists.txt  deltaTime.cpp  deltaTime.hpp
lib/delta_time/: CMakeLists.txt  delta_time.cpp  delta_time.hpp
lib/father_time/: CMakeLists.txt  delta_time.cpp
lib/replayTable/: CMakeLists.txt  QtApp.cpp  QtApp.hpp  QtApp.ui  mainQt.cpp  replayTable.hpp  replayTableData.cpp  replayTableMain.cpp
lib/replayTable/test/: CMakeLists.txt  replayTable_test.cpp
lib/vector3d/: CMakeLists.txt  vector3d.cpp  vector3d.hpp
lib/vector3d/test/: CMakeLists.txt  vector3d_test.cpp
lib/window/: CMakeLists.txt
src/: CMakeLists.txt  object.cpp
src/app/: CMakeLists.txt  PlaneInteraction.cpp  PlaneInteraction.h  main.cpp  window.hpp
src/app/physics/object/: object.cpp  orbitalMechanics.cpp  orbitalMechanics.h
src/app/physics/sim/fluid/: fluidSim.h
src/cmake_examples/: CMakeLists.txt
src/cmake_examples/test_1/: CMakeLists.txt
src/cmake_examples/test_2/: CMakeLists.txt  text.txt
src/cmake_examples/test_3/: CMakeLists.txt  calc.cpp  header.hpp  main.cpp
src/physics/: CMakeLists.txt  light.cpp
src/physics/collision/: CMakeLists.txt  collision.cpp  collision.hpp
src/physics/collisionSystem/: CMakeLists.txt  collisionSystem.hpp
src/physics/engine/: CMakeLists.txt  engine.cpp  engine.hpp
src/physics/object/: CMakeLists.txt  object.cpp  object.hpp
src/physics/renderer/: CMakeLists.txt  physicsView.cpp  physicsView.hpp  renderer.cpp  renderer.hpp  shapes.cpp  shapes.hpp
src/physics/rigidBody/: CMakeLists.txt  rigidBody.cpp  rigidBody.hpp
src/physics/rigidBody/test/: CMakeLists.txt  collision_test.cpp
src/physics/world/: CMakeLists.txt  world.cpp  world.hpp
src/simulations/: CMakeLists.txt
src/simulations/collisionSim/: CMakeLists.txt  collider.hpp  main.cpp  main.hpp  rigidBody.cpp  rigidBody.hpp  window.cpp  window.hpp  world.cpp  world.hpp
src/simulations/collisionSim/test/: CMakeLists.txt  rigidBody_test.cpp
src/simulations/fluidSim/: CMakeLists.txt  QtApp.cpp  QtApp.hpp  fluid.hpp  fluidBody.cpp  fluidBody.hpp  fluidEngine.cpp  fluidPhysicsView.hpp  fluidRenderer.cpp  fluidRenderer.hpp  fluidShapes.cpp  fluidShapes.hpp  fluidSim.cpp  fluidSim.hpp  fluidSim2.cpp  fluidWorld.cpp  fluidWorld.hpp  main  mainFluid.cpp  mainQt.cpp  mainWindow.cpp  mainWindow.hpp  object.hpp  testingSuite.cpp
src/simulations/fluidSim/qtSim/: CMakeLists.txt  fluidBody.cpp  fluidBody.hpp  fluidEngine.cpp  fluidEngine.hpp  fluidPhysicsView.cpp  fluidRenderer.cpp  fluidRenderer.hpp  fluidShapes.cpp  fluidShapes.hpp  fluidWorld.cpp  fluidWorld.hpp  mainQt.cpp
src/simulations/lightSim/: BaseScene.cpp  BaseScene.hpp  CMakeLists.txt  LightBase.hpp  LightBody.hpp  LightParticle.cpp  LightParticle.hpp  LightRay.cpp  LightRay.hpp  LightScene.cpp  LightScene.hpp  LightStruct.hpp  LightWave.cpp  LightWave.hpp  MaterialVolume.hpp  Medium.cpp  Medium.hpp  Mirror.cpp  Mirror.hpp  Scene.cpp  Scene.hpp  lightBody.cpp  lightBody.hpp  lightBodyTest.cpp  lightScene.cpp  lightScene.hpp  lightSim.cpp  lightSim.hpp  lightTODO.txt  lightTest.cpp  lightTestSuite  lightTestSuite.cpp  main.cpp  sim  test  test2  tester.cpp
src/simulations/lightSim/qtApp/light_sim_widget/: CMakeLists.txt
src/simulations/orbitalMechanics/: CMakeCache.txt  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  mainOM.cpp  mainQt.cpp  orbitSimulation.cpp  orbitSimulation.hpp  orbitalMechanics.cpp  orbitalMechanics.hpp  test_detail.xml  testingSuite.cpp
src/simulations/planeInteraction/: .planeIntMain.cpp.swp  CMakeLists.txt  QtApp.cpp  QtApp.hpp  planeIntMain.cpp  planeInteraction.cpp  planeInteractionMech.cpp  planeInteractionMech.hpp  planeInteractionSim.cpp  planeInteractionSim.hpp  testSuite.cpp
src/simulations/planetSim/: CMakeLists.txt  QtApp.cpp  QtApp.hpp  objects.hpp  plane.hpp  planetSim.cpp  planetSim.h  planets.hpp  simConfig.cpp  simConfig.hpp  simulation.cpp  simulation.hpp  thomas_blackBoxTest.cpp  thomas_integrationTest.cpp  thomas_whiteBoxTest.cpp
src/ui/: CMakeLists.txt
src/ui/replayTable/: CMakeLists.txt  replayTable.hpp  replayTableData.cpp  replayTableMain.cpp
